tomcat launcher (in progress)